--- a/src/partials/tour-selection.html
+++ b/src/partials/tour-selection.html
@@ -1,391 +1,9 @@
 <section class="tour-selection section-offset">
   <div class="container">
     <h2 class="title">Подбор тура по направлениям</h2>
-  <ul class="list-reset sliders">
-    <li class="slider-wrapper">
-      <div class="small-slider">
-        <div class="small-slider__slides">
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/dominic1.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/dominic2.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/dominic3.jpg" alt="img">
-          </div>
-        </div>
-        <div class="slideshow">
-          <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-290"></div>
-          <div class="slideshow__item" data-position="-580"></div>
-        </div>
-      </div>
-      <div class="small-slider__foofer">
-        <div class="small-slider__foofer-left">
-          <div class="small-slider__foofer-title">
-            <a href="#" class="small-slider__link">Доминикана</a>
-          </div>
-          <div class="small-slider__foofer-right">
-            <noindex>
-              <a class="restyled-btn btn btn-reset" href="#">Туры</a>
-            </noindex>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="slider-wrapper">
-      <div class="small-slider">
-        <div class="small-slider__slides">
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Bulgaria1.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Bulgaria2.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Bulgaria3.jpg" alt="img">
-          </div>
-        </div>
-        <div class="slideshow">
-          <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-290"></div>
-          <div class="slideshow__item" data-position="-580"></div>
-        </div>
-      </div>
-      <div class="small-slider__foofer">
-        <div class="small-slider__foofer-left">
-          <div class="small-slider__foofer-title">
-            <a href="#" class="small-slider__link">Болгария</a>
-          </div>
-          <div class="small-slider__foofer-right">
-            <noindex>
-              <a class="restyled-btn btn btn-reset" href="#">Туры</a>
-            </noindex>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="slider-wrapper">
-      <div class="small-slider">
-        <div class="small-slider__slides">
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Cuba1.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Cuba2.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Cuba3.jpg" alt="img">
-          </div>
-        </div>
-        <div class="slideshow">
-          <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-290"></div>
-          <div class="slideshow__item" data-position="-580"></div>
-        </div>
-      </div>
-      <div class="small-slider__foofer">
-        <div class="small-slider__foofer-left">
-          <div class="small-slider__foofer-title">
-            <a href="#" class="small-slider__link">Куба</a>
-          </div>
-          <div class="small-slider__foofer-right">
-            <noindex>
-              <a class="restyled-btn btn btn-reset" href="#">Туры</a>
-            </noindex>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="slider-wrapper">
-      <div class="small-slider">
-        <div class="small-slider__slides">
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Cyprus1.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Cyprus2.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Cyprus3.jpg" alt="img">
-          </div>
-        </div>
-        <div class="slideshow">
-          <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-290"></div>
-          <div class="slideshow__item" data-position="-580"></div>
-        </div>
-      </div>
-      <div class="small-slider__foofer">
-        <div class="small-slider__foofer-left">
-          <div class="small-slider__foofer-title">
-            <a href="#" class="small-slider__link">Кипр</a>
-          </div>
-          <div class="small-slider__foofer-right">
-            <noindex>
-              <a class="restyled-btn btn btn-reset" href="#">Туры</a>
-            </noindex>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="slider-wrapper">
-      <div class="small-slider">
-        <div class="small-slider__slides">
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Greece1.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Greece2.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Greece3.jpg" alt="img">
-          </div>
-        </div>
-        <div class="slideshow">
-          <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-290"></div>
-          <div class="slideshow__item" data-position="-580"></div>
-        </div>
-      </div>
-      <div class="small-slider__foofer">
-        <div class="small-slider__foofer-left">
-          <div class="small-slider__foofer-title">
-            <a href="#" class="small-slider__link">Греция</a>
-          </div>
-          <div class="small-slider__foofer-right">
-            <noindex>
-              <a class="restyled-btn btn btn-reset" href="#">Туры</a>
-            </noindex>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="slider-wrapper">
-      <div class="small-slider">
-        <div class="small-slider__slides">
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/India1.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/India2.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/India3.jpg" alt="img">
-          </div>
-        </div>
-        <div class="slideshow">
-          <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-290"></div>
-          <div class="slideshow__item" data-position="-580"></div>
-        </div>
-      </div>
-      <div class="small-slider__foofer">
-        <div class="small-slider__foofer-left">
-          <div class="small-slider__foofer-title">
-            <a href="#" class="small-slider__link">Индия</a>
-          </div>
-          <div class="small-slider__foofer-right">
-            <noindex>
-              <a class="restyled-btn btn btn-reset" href="#">Туры</a>
-            </noindex>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="slider-wrapper">
-      <div class="small-slider">
-        <div class="small-slider__slides">
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Maldives1.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Maldives2.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Maldives3.jpg" alt="img">
-          </div>
-        </div>
-        <div class="slideshow">
-          <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-290"></div>
-          <div class="slideshow__item" data-position="-580"></div>
-        </div>
-      </div>
-      <div class="small-slider__foofer">
-        <div class="small-slider__foofer-left">
-          <div class="small-slider__foofer-title">
-            <a href="#" class="small-slider__link">Мальдивы</a>
-          </div>
-          <div class="small-slider__foofer-right">
-            <noindex>
-              <a class="restyled-btn btn btn-reset" href="#">Туры</a>
-            </noindex>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="slider-wrapper">
-      <div class="small-slider">
-        <div class="small-slider__slides">
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Morocco1.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Morocco2.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Morocco3.jpg" alt="img">
-          </div>
-        </div>
-        <div class="slideshow">
-          <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-290"></div>
-          <div class="slideshow__item" data-position="-580"></div>
-        </div>
-      </div>
-      <div class="small-slider__foofer">
-        <div class="small-slider__foofer-left">
-          <div class="small-slider__foofer-title">
-            <a href="#" class="small-slider__link">Морокко</a>
-          </div>
-          <div class="small-slider__foofer-right">
-            <noindex>
-              <a class="restyled-btn btn btn-reset" href="#">Туры</a>
-            </noindex>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="slider-wrapper">
-      <div class="small-slider">
-        <div class="small-slider__slides">
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Spain1.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Spain2.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Spain3.jpg" alt="img">
-          </div>
-        </div>
-        <div class="slideshow">
-          <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-290"></div>
-          <div class="slideshow__item" data-position="-580"></div>
-        </div>
-      </div>
-      <div class="small-slider__foofer">
-        <div class="small-slider__foofer-left">
-          <div class="small-slider__foofer-title">
-            <a href="#" class="small-slider__link">Испания</a>
-          </div>
-          <div class="small-slider__foofer-right">
-            <noindex>
-              <a class="restyled-btn btn btn-reset" href="#">Туры</a>
-            </noindex>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="slider-wrapper">
-      <div class="small-slider">
-        <div class="small-slider__slides">
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Tanzania1.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Tanzania2.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Tanzania3.jpg" alt="img">
-          </div>
-        </div>
-        <div class="slideshow">
-          <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-290"></div>
-          <div class="slideshow__item" data-position="-580"></div>
-        </div>
-      </div>
-      <div class="small-slider__foofer">
-        <div class="small-slider__foofer-left">
-          <div class="small-slider__foofer-title">
-            <a href="#" class="small-slider__link">Танзания</a>
-          </div>
-          <div class="small-slider__foofer-right">
-            <noindex>
-              <a class="restyled-btn btn btn-reset" href="#">Туры</a>
-            </noindex>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="slider-wrapper">
-      <div class="small-slider">
-        <div class="small-slider__slides">
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Tunisia1.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Tunisia2.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/Tunisia3.jpg" alt="img">
-          </div>
-        </div>
-        <div class="slideshow">
-          <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-290"></div>
-          <div class="slideshow__item" data-position="-580"></div>
-        </div>
-      </div>
-      <div class="small-slider__foofer">
-        <div class="small-slider__foofer-left">
-          <div class="small-slider__foofer-title">
-            <a href="#" class="small-slider__link">Тунис</a>
-          </div>
-          <div class="small-slider__foofer-right">
-            <noindex>
-              <a class="restyled-btn btn btn-reset" href="#">Туры</a>
-            </noindex>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="slider-wrapper">
-      <div class="small-slider">
-        <div class="small-slider__slides">
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/THailand1.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/THailand2.jpg" alt="img">
-          </div>
-          <div>
-            <img class="small-slider__slide-img" src="../img/tour-selection/THailand3.jpg" alt="img">
-          </div>
-        </div>
-        <div class="slideshow">
-          <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-290"></div>
-          <div class="slideshow__item" data-position="-580"></div>
-        </div>
-      </div>
-      <div class="small-slider__foofer">
-        <div class="small-slider__foofer-left">
-          <div class="small-slider__foofer-title">
-            <a href="#" class="small-slider__link">Тайланд</a>
-          </div>
-          <div class="small-slider__foofer-right">
-            <noindex>
-              <a class="restyled-btn btn btn-reset" href="#">Туры</a>
-            </noindex>
-          </div>
-        </div>
-      </div>
-    </li>
-  </ul>
+    <ul class="list-reset products"></ul>
+    <div class="btn-container products__more">
+      <button class="btn btn-reset btn-more">Еще туры</button>
+    </div>
   </div>
 </section>
