--- a/src/scss/components/_tour-selection.scss
+++ b/src/scss/components/_tour-selection.scss
@@ -1,7 +1,8 @@
-.sliders {
+.products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding-bottom: 30px;
 }
 
 .slider-wrapper {
@@ -9,11 +10,16 @@
   width: 290px;
   box-shadow: 1px 1px 10px rgb(0 0 0 / 30%);
 }
+.product-card {
+  margin: 8px;
+  width: 290px;
+  box-shadow: 1px 1px 10px rgb(0 0 0 / 30%);
 
-.small-slider {
-  position: relative;
+  &__slider {
+    position: relative;
   overflow: hidden;
   height: 180px;
+  }
 
   &__slides {
     position: absolute;
@@ -25,12 +31,12 @@
     transition: 0.24s linear;
   }
 
-  &__slide-img {
+  &__img {
     height: auto;
     min-height: 180px;
   }
 
-  &__foofer {
+  &__footer {
     position: relative;
     left: 0;
     bottom: 0;
@@ -38,29 +44,16 @@
     background: var(--color-light);
   }
 
-  &__foofer-left {
+  &__foofer-inner {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 8px 10px;
+    padding: 14px 10px;
   }
 
-  &__foofer-title {
+  &__title {
     font-size: 20px;
-    line-height: 53px;
-  }
-
-  &__link {
     color: var(--color-ebony);
-  }
-
-  &__foofer-right:before {
-    content: "";
-    position: absolute;
-    left: -10px;
-    top: 0;
-    width: 10px;
-    height: 100%;
   }
 }
 
@@ -72,20 +65,20 @@
   justify-content: space-between;
   width: 100%;
   height: 100%;
-}
 
-.slideshow__item {
-  width: 100%;
-  height: auto;
+  &__item {
+    width: 100%;
+    height: auto;
 
-  &:hover {
-    border-bottom: 3px solid rgb(239, 192, 37);
+    &:hover {
+      border-bottom: 3px solid rgb(239, 192, 37);
+    }
   }
 }
 
-.restyled-btn {
+.btn-product-card {
   padding: 0 12px;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 34px;
   background: var(--color-primary);
   transition: 0.2s;
@@ -93,5 +86,19 @@
 
   &:hover {
     background: var(--color-active);
+  }
+}
+
+.products__more {
+  text-align: center;
+}
+
+.btn-more {
+  border: 2px solid var(--color-primary);
+  padding: 7px 20px;
+  font-weight: 400;
+
+  &:hover {
+    background: var(--color-primary);
   }
 }
