--- a/src/partials/sales-offices.html
+++ b/src/partials/sales-offices.html
@@ -1,6 +1,6 @@
 <section class="sales-offices">
   <div class="container">
-    <ul class="list-reset breadcrumbs">
+    <ul class="list-reset breadcrumbs breadcrumbs--mb">
       <li class="breadcrumbs__item">
         <a href="index.html" class="breadcrumbs__link">Главная</a>
       </li>
