--- a/src/partials/msk-kurskaya.html
+++ b/src/partials/msk-kurskaya.html
@@ -35,7 +35,7 @@
           </ul>
         </li>
       </ul>
-      <div id="map4" class="msk4"></div>
+      <div id="map4" class="msk4 map-mobile"></div>
     </div>
   </div>
 </section>
