--- a/src/partials/msk-maryina.html
+++ b/src/partials/msk-maryina.html
@@ -35,7 +35,7 @@
           </ul>
         </li>
       </ul>
-      <div id="map6" class="msk6"></div>
+      <div id="map6" class="msk6 map-mobile"></div>
     </div>
   </div>
 </section>
