--- a/src/partials/spb-novocherkasskaya.html
+++ b/src/partials/spb-novocherkasskaya.html
@@ -35,7 +35,7 @@
           </ul>
         </li>
       </ul>
-      <div id="map-spb" class="spb"></div>
+      <div id="map-spb" class="spb map-mobile"></div>
     </div>
   </div>
 </section>
