--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -8,6 +8,7 @@
   // colors
   --color-light: #fff;
   --color-violet: #edf1fe;
+  --color-aliceblue: #f0f8ff;
   --color-rinse: #d4d9de;
   --color-sand: #f5f5f5;
   --color-primary: #ffe733;
