--- a/src/partials/kzn-tukai.html
+++ b/src/partials/kzn-tukai.html
@@ -35,7 +35,7 @@
           </ul>
         </li>
       </ul>
-      <div id="map-kzn" class="kzn"></div>
+      <div id="map-kzn" class="kzn map-mobile"></div>
     </div>
   </div>
 </section>
