--- a/src/partials/msk-1905.html
+++ b/src/partials/msk-1905.html
@@ -35,7 +35,7 @@
           </ul>
         </li>
       </ul>
-      <div id="map2" class="msk2"></div>
+      <div id="map2" class="msk2 map-mobile"></div>
     </div>
   </div>
 </section>
