--- a/src/partials/msk-baumanskaya.html
+++ b/src/partials/msk-baumanskaya.html
@@ -35,7 +35,7 @@
           </ul>
         </li>
       </ul>
-      <div id="map3" class="msk3"></div>
+      <div id="map3" class="msk3 map-mobile"></div>
     </div>
   </div>
 </section>
