--- a/src/partials/msk-frunzenskaya.html
+++ b/src/partials/msk-frunzenskaya.html
@@ -35,7 +35,7 @@
           </ul>
         </li>
       </ul>
-      <div id="map5" class="msk5"></div>
+      <div id="map5" class="msk5 map-mobile"></div>
     </div>
   </div>
 </section>
