--- a/src/partials/spb-moskovskie_vorota.html
+++ b/src/partials/spb-moskovskie_vorota.html
@@ -35,7 +35,7 @@
           </ul>
         </li>
       </ul>
-      <div id="map-spb4" class="spb4"></div>
+      <div id="map-spb4" class="spb4 map-mobile"></div>
     </div>
   </div>
 </section>
