--- a/src/partials/spb-primorskaya.html
+++ b/src/partials/spb-primorskaya.html
@@ -35,7 +35,7 @@
           </ul>
         </li>
       </ul>
-      <div id="map-spb3" class="spb3"></div>
+      <div id="map-spb3" class="spb3 map-mobile"></div>
     </div>
   </div>
 </section>
