--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -1,9 +1,7 @@
 .breadcrumbs {
   @include flex-v-center;
 
-  &--mb {
-    margin-bottom: 20px;
-  }
+  margin: 30px 0 30px;
 
   &__item {
     position: relative;
