--- a/src/scss/components/_offices-map.scss
+++ b/src/scss/components/_offices-map.scss
@@ -1,3 +1,21 @@
+.map {
+  width: 100%;
+  height: 600px;
+  background-color: #d8f1c2;
+
+  @include small-tablet {
+    height: 500px;
+  }
+
+  @include mobile {
+    height: 400px;
+  }
+}
+
+.balloon__link {
+  border-radius: 3px;
+  padding: 3px 6px;
+}
 
 .msk {
   width: 60%;
@@ -5,76 +23,22 @@
   background-color: var(--color-bgreen);
 }
 
-.msk2 {
+.map-mobile {
   width: 60%;
   height: 600px;
   background-color: var(--color-bgreen);
-}
 
-.msk3 {
-  width: 60%;
-  height: 600px;
-  background-color: var(--color-bgreen);
-}
+  @include tablet {
+    width: 100%;
+  }
 
-.msk4 {
-  width: 60%;
-  height: 600px;
-  background-color: var(--color-bgreen);
-}
+  @include small-tablet {
+    height: 500px;
+  }
 
-.msk5 {
-  width: 60%;
-  height: 600px;
-  background-color: var(--color-bgreen);
-}
-
-.msk6 {
-  width: 60%;
-  height: 600px;
-  background-color: var(--color-bgreen);
-}
-
-.msk7 {
-  width: 60%;
-  height: 600px;
-  background-color: var(--color-bgreen);
-}
-
-.spb {
-  width: 60%;
-  height: 600px;
-  background-color: var(--color-bgreen);
-}
-
-.spb2 {
-  width: 60%;
-  height: 600px;
-  background-color: var(--color-bgreen);
-}
-
-.spb3 {
-  width: 60%;
-  height: 600px;
-  background-color: var(--color-bgreen);
-}
-
-.spb4 {
-  width: 60%;
-  height: 600px;
-  background-color: var(--color-bgreen);
-}
-
-.kzn {
-  width: 60%;
-  height: 600px;
-  background-color: var(--color-bgreen);
-}
-
-.vlg {
-  width: 60%;
-  height: 600px;
-  background-color: var(--color-bgreen);
+  @include mobile {
+    height: 400px;
+  }
 }
 
 [class*="copyrights-pane"] {
