--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,7 +21,7 @@
           </div>
 
           <a class="header__nav-link header__nav-link-cover" href="sales-offices.html">Офисы продаж</a>
-          <a class="header__nav-link header__nav-link-cover" href="#">Вход для агентов</a>
+          <a class="header__nav-link header__nav-link-cover" href="agencies.html">Агентствам</a>
         </nav>
       </div>
 
