--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,6 +28,7 @@
 @import "./components/sales-offices";
 @import "./components/offices";
 @import "./components/offices-map";
+@import "./components/agencies";
 
 // подключения компонентов страницы (мелкие компоненты)
 @import "./components/header-account";
