--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -205,6 +205,19 @@ input {
     font-weight: 500;
   }
 
+  &--agencies {
+    margin: 0 !important;
+    padding: 30px 0 30px;
+    font-weight: 400;
+  }
+
+  &--benefits {
+    margin-bottom: 10px !important;
+    font-size: 20px !important;
+    text-decoration: underline;
+    color: var(--color-sapphire);
+  }
+
   @include small-tablet {
     font-size: 28px;
     line-height: 120%;
