--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -40,12 +40,12 @@
               <use xlink:href="img/sprite.svg#user"></use>
             </svg>
           </span>
-          <a href="#" class="account__link">
+          <a href="favorite.html" class="account__link">
             <svg class="account__icon" aria-hidden="true">
               <use xlink:href="img/sprite.svg#heart"></use>
             </svg>
           </a>
-          <a href="#" class="account__link">
+          <a href="basket.html" class="account__link">
             <svg class="account__icon" aria-hidden="true">
               <use xlink:href="img/sprite.svg#basket"></use>
             </svg>
