--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,6 +29,8 @@
 @import "./components/offices";
 @import "./components/offices-map";
 @import "./components/agencies";
+@import "./components/favorite";
+@import "./components/basket";
 
 // подключения компонентов страницы (мелкие компоненты)
 @import "./components/header-account";
